mlxrs/tests/ui-tests/no_sync.stderr
error[E0277]: `*mut c_void` cannot be shared between threads safely
 --> tests/ui-tests/no_sync.rs:4:17
  |
4 |   assert_sync::<mlxrs::Array>();
  |                 ^^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
  |
  = help: within `mlxrs::Array`, the trait `Sync` is not implemented for `*mut c_void`
note: required because it appears within the type `mlxrs_sys::generated::mlx_array_`
 --> $WORKSPACE/mlxrs-sys/src/generated/bindings.rs
  |
  | pub struct mlx_array_ {
  |            ^^^^^^^^^^
note: required because it appears within the type `mlxrs::Array`
 --> src/array/mod.rs
  |
  | pub struct Array(pub(crate) mlxrs_sys::mlx_array);
  |            ^^^^^
note: required by a bound in `assert_sync`
 --> tests/ui-tests/no_sync.rs:1:19
  |
1 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`
