mlxrs/tests/ui-tests/no_sync.rs
fn assert_sync<T: Sync>() {}

fn main() {
  assert_sync::<mlxrs::Array>();
}
